test/e2e/features/agentgateway/policystatus/testdata/policy-with-missing-gw.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: example-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: missing-gw
  traffic:
    cors:
      allowOrigins:
        - "https://ignored.com"
